--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://taozhuo.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Zhuo's' Blog
+subtitle: Big Data, Machine Learning, Spark, MapReduce, Hadoop
+author: Zhuo Tao
 simple_search: https://www.google.com/search
 description:
 
