--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://taozhuo.github.io
-title: Zhuo's' Blog
+title: Zhuo's Blog
 subtitle: Big Data, Machine Learning, Spark, MapReduce, Hadoop
 author: Zhuo Tao
 simple_search: https://www.google.com/search
